test/Error/Driver/T57-MakeMain/Main.ds

-- This file has no main function, so when we try to 
--	make it we should get an error


foo () = putStr "dude"